main page high contrast issue resolved

--- a/theme/css/site-responsive.css
+++ b/theme/css/site-responsive.css
@@ -1735,7 +1735,7 @@
 	}
 	.gray-bg.padding-top-bott {
 		padding-top: 15px !important;
-		background: #fff;
+		background: #000000;
 	}
 	.footer-top-wrapper ul li a {
 		padding: 0px;
